# dotViewer

./: .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CONTEXT.md  CLAUDE_SESSION_LOG.md  DOCUMENTATION_COVERAGE_REPORT.md  DOTVIEWER_VS_COMPETITORS_ANALYSIS.md  EXTENSION_STATUS_BUG.md  ExportOptions-AppStore.plist  ExportOptions-DevID.plist  HOW_TO_RELEASE.md  KNOWN_ISSUES.md  LICENSE  PERFORMANCE_ANALYSIS.md  PRIVACY.md  PRODUCTION_READY.md  QA_FINDINGS.md  QUICKLOOK_PERFORMANCE_RESEARCH.md  README.md  REWRITE_PROMPT.md  TEST_MARKDOWN.md  long_plan_e2e-tests_performance-fix_uti-launch-fix.txt  phase4backup.txt  phase_3_planned_bckup.txt  quicklook-extension-playground.html  typescript
.agents/: product-marketing-context.md
.planning/: CODE_REVIEW_2025-01-22.md  COMPREHENSIVE_REVIEW_FINAL_REPORT.md  CONTEXT-ISSUES.md  IMPLEMENTATION_PLAN_2025-01-22.md  MILESTONES.md  PROJECT.md  REVIEW_IMPLEMENTATION_REPORT.md  ROADMAP.md  STATE.md  context_backup_appstore_signing_fix.md  phase-3-testing-evaluation-report.md  testing-quick-start.md  testing-roadmap-actionable.md
QuickLookPreview/: Info.plist  MarkdownRenderedViewLegacy.swift  MarkdownStyles.swift  MarkdownWebView.swift  PreviewContentView.swift  PreviewViewController.swift  QuickLookPreview.entitlements
Shared/: Constants.swift  DiskCache.swift  (+13 more)
syntect-swift/: Cargo.toml  build-xcframework.sh  uniffi.toml
syntect-swift/SyntectSwiftFFI.xcframework/: Info.plist
syntect-swift/SyntectSwiftFFI.xcframework/macos-arm64_x86_64/Headers/: SyntectSwiftFFI.h  module.modulemap
syntect-swift/src/: lib.rs
(+643 files in other folders)
